// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filters according to event: another_mock_event 1`] = `
Object {
  "context_app_name": "Hedvig",
  "property_store": Array [],
}
`;

exports[`filters according to event: mock_event 1`] = `
Object {
  "context_app_name": "Hedvig",
}
`;
